# ChargedHiggsAnalysis

./: .gitignore  .gitmodules  README.md  gpu_test.py  optimizeHyperParams.py  parseFakeRate.sh  run.sh  setup.sh  submit.jds  submitAddScoreToSkimTree.sh  submitMakeHistograms.py  submitMakeHistograms.sh  submitOptimizeCuts.sh  submitOptimizeHyperparams.sh  submitPrepareDatacard.sh  submitPrepareDataset.sh  submitSelectModels.py  submitSelectModels.sh  submitTrainModels.py  submitTrainModels.py.bak
AcceptanceStudy/: drawAcceptance.py
Conversion/: MeasConvSF.ipynb  test.ipynb
DenseNeuralNet/: evalModels.py  evalModels.sh  optimizeHyperParams.py  trainModel.py
DiLeptonRegion/: drawPlots.py  drawPlots.sh  histConfigs.py
DiLeptonValidation/: drawPlots.sh  histConfigs.py  plot.py
ElectronOptimization/: check.sh  checkMVATightWP.py  opencv.ipynb  passEntries.py  readFakeRate.ipynb  result.md  test.ipynb  test.sh  test2.ipynb
GraphNeuralNet/: .doThis.sh.swp  (+9 more)
MeasFakeRateV2/: CMakeLists.txt  README.md  measFakeRate.ipynb  parseIntegral.py  performFit.py
MeasFakeRateV2/include/: FitMT.h  LinkDef.h
MeasFakeRateV2/output/2016preVFP/MeasFakeEl12/: fitresult.loose.Central.csv  fitresult.loose.RequireHeavyTag.csv  fitresult.tight.Central.csv  fitresult.tight.RequireHeavyTag.csv
MeasFakeRateV2/output/2016preVFP/MeasFakeEl23/: fitresult.loose.Central.csv  fitresult.loose.RequireHeavyTag.csv  fitresult.tight.Central.csv  fitresult.tight.RequireHeavyTag.csv
MeasFakeRateV2/scripts/: build.sh  parseIntegral.sh  performFit.sh
MeasFakeRateV2/src/: FitMT.cc  FitMT.cc.bak
(+30496 files in other folders)
